# SentinalGaurd

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: cleanup.rs  devices.rs  firewall.rs  logs.rs  mod.rs  network.rs  processes.rs  startup.rs  system.rs  whitelist.rs  wifi.rs
src-tauri/src/services/: mod.rs  powershell.rs  storage.rs
src/components/dashboard/: ActivityFeed.tsx  ShieldStatus.tsx  StatsGrid.tsx
src/components/devices/: DeviceTable.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TitleBar.tsx
src/components/security-logs/: LogConsole.tsx  LogEntry.tsx  LogToolbar.tsx  StatusFooter.tsx
src/components/ui/: StatusBadge.tsx  Toggle.tsx
src/lib/: tauri.ts
src/pages/: Dashboard.tsx  DeviceManager.tsx  DiskCleanup.tsx  Firewall.tsx  Network.tsx  ProcessMonitor.tsx  SecurityLogs.tsx  StartupPrograms.tsx  SystemInfo.tsx  WifiPasswords.tsx
