[package]
name = "sentinelguard"
version = "0.1.0"
description = "Endpoint Security & Hardware Access Control System"
authors = ["you"]
edition = "2021"

[lib]
name = "sentinelguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
